-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0 RC 2
-
Fix Version/s: 5.0.1
-
Component/s: ActiveX Support
-
Labels:None
-
Environment:Windows
-
Commits:826c4f60b65532033045e76d34fb718957a26fa9, daef188711e4c7459eb8d399778d1766979e80e0
Unable to build ActiveQt tools statically, symbol conflict with windows platform plugin:
Qt5AxContainerd.lib(qaxbase.obj) : error LNK2005: "bool __cdecl QVariantToVARIANT(class QVariant const &,struct tagVARIANT &,class QByteArray const &,bool)" (?QVariantToVARIANT@@YA_NAEBVQVariant@@AEAUtagVARIANT@@AEBVQByteArray@@_N@Z) already defined in qwindowsd.lib(comutils.obj)
For Gerrit Dashboard: QTBUG-28645 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
43001,3 | Rename conflicting symbol QVariantToVARIANT | stable | qt/qtbase | Status: MERGED | +2 | 0 |
43002,3 | Do not build dlldata.c in static builds | stable | qt/qtbase | Status: MERGED | +2 | 0 |
104588,6 | Do not compile in dlldata.c or ia2_api_all_c.c | dev | qt/qtbase | Status: MERGED | +2 | 0 |