src/plugins/platforms/windows/accessible/comutils.cpp
@@ -1,3 +1,3 @@
 DECL|function|QColorToOLEColor
 DECL|function|QDateTimeToDATE
-DECL|function|QVariantToVARIANT
+DECL|function|QVariant2VARIANT
